[package]
name = "changelog"
version = "0.0.0"
authors = ["konojunya <junya03dance@gmail.com>"]
description = "generate simple CHANGELOG"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.2"
chrono = "0.4.19"
octocrab = "0.12.0"
tokio = { version = "1.2.0", features = ["full"] }
serde = "1.0.130"
serde_json = "1.0.68"
